k8s/homepage-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
      - env:
        image: paulmeng/homepage:latest
        imagePullPolicy: Always
        name: homepage 
        ports:
        - containerPort: 80
