k8s/blog.yml
apiVersion: v1
kind: Service
metadata:
  name: blog 
spec:
  ports:
  - port: 80
    targetPort: 80 
  selector:
    app: blog 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog 
spec:
  selector:
    matchLabels:
      app: blog 
  replicas: 2
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: paulmeng/blog:v1.0.14
        imagePullPolicy: Always
        ports:
        - containerPort: 5678
