k8s/fathom.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fathom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fathom
  template:
    metadata:
      labels:
        app: fathom
    spec:
      securityContext:
        runAsUser: 10001
      containers:
      - name: fathom
        image: usefathom/fathom:latest
        command:
          - /bin/sh
          - -c
          - /app/fathom --config=/etc/fathom/fathom.env server
        ports:
          - containerPort: 8080
        volumeMounts:
          - name: data
            mountPath: /db
          - name: config
            mountPath: /etc/fathom
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            name: fathom-config
---
apiVersion: v1
kind: Service
metadata:
  name: fathom
  labels:
    app: fathom
spec:
  selector:
    app: fathom
  ports:
    - name: fathom
      protocol: TCP
      port: 8080
